dashboard, css some pages

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,5 +3,6 @@
 @import "navbar";
 @import "annonces-cards";
 @import "conversation-cards";
+@import "dashboard-cards";
 @import "show";
 @import "footer";
