--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,1 +1,22 @@
 <%= render 'admin/shared/navbar-admin' %>
+
+<div class="container flex-evenly">
+  <div class="card card-dashboard" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title"><i class="fas fa-users"></i> Nombre d'utilisateurs</h5>
+      <p class="card-text"><%= @nb_users %></p>
+    </div>
+  </div>
+  <div class="card card-dashboard" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title"><i class="fa fa-list"></i> Nombre d'annonces</h5>
+      <p class="card-text"><%= @nb_annonces %> annonces</p>
+    </div>
+  </div>
+  <div class="card card-dashboard" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title"><i class="fas fa-times"></i> Nombre de conflits</h5>
+      <p class="card-text"><%= @nb_conflits %> conflits</p>
+    </div>
+  </div>
+</div>
