--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,5 +4,6 @@
 @import "annonces-cards";
 @import "conversation-cards";
 @import "dashboard-cards";
+@import "modal-echange";
 @import "show";
 @import "footer";
