--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -37,7 +37,7 @@
   color: $main-text-color;
 }
 
-form p {
+form.search p {
   color: $main-text-color !important;
   font-weight: bold !important;
   margin-bottom:5px !important;
