--- a/app/views/admin/shared/_navbar-admin.html.erb
+++ b/app/views/admin/shared/_navbar-admin.html.erb
@@ -3,10 +3,10 @@
   <hr>
   <nav class="nav nav-pills nav-justified">
     <%= link_to '<i class="fas fa-tachometer-alt"></i> Dashboard'.html_safe, admin_dashboard_index_path, class: "nav-item nav-link", id: 'admin_dashboard'%>
-    <%= link_to '<i class="fas fa-users"></i> Gestion des utilisateurs'.html_safe, admin_users_path, class: "nav-item nav-link", id: 'admin_users' %>
-    <%= link_to '<i class="fas fa-newspaper"></i> Gestion des annonces'.html_safe, admin_annonces_path, class: "nav-item nav-link", id: 'admin_annonces' %>
-    <%= link_to '<i class="fas fa-exclamation-triangle"></i> Gestion des conflits'.html_safe, admin_conflicts_path, class: "nav-item nav-link", id: 'admin_conflits' %>
-    <%= link_to '<i class="fab fa-stripe-s"></i> Gestion de stripe'.html_safe, admin_conflicts_path, class: "nav-item nav-link", id: 'admin_stripe' %>
+    <%= link_to '<i class="fas fa-users"></i> Utilisateurs'.html_safe, admin_users_path, class: "nav-item nav-link", id: 'admin_users' %>
+    <%= link_to '<i class="fas fa-newspaper"></i> Annonces'.html_safe, admin_annonces_path, class: "nav-item nav-link", id: 'admin_annonces' %>
+    <%= link_to '<i class="fas fa-exclamation-triangle"></i> Conflits'.html_safe, admin_conflits_path, class: "nav-item nav-link", id: 'admin_conflits' %>
+    <%= link_to '<i class="fab fa-stripe-s"></i> Stripe'.html_safe, admin_conflits_path, class: "nav-item nav-link", id: 'admin_stripe' %>
   </nav>
 <hr class="my-3">
 </div>
