--- a/app/views/annonces/show.html.erb
+++ b/app/views/annonces/show.html.erb
@@ -52,7 +52,7 @@
   <% if current_user %>
     <% if @annonce.user != current_user  %>
       <%= link_to '<i class="fas fa-envelope"></i> Contacter cette personne'.html_safe, conversations_path(sender_id: current_user, recipient_id: @annonce.user), method: 'post', class: 'btn btn-primary'%>
-      <%= link_to '<i class="fas fa-exchange-alt"></i> Demander un échange'.html_safe, root_path, class: 'btn btn-primary'%>
+      <%= link_to '<i class="fas fa-exchange-alt"></i> Demander un échange'.html_safe, conversations_path(sender_id: current_user, recipient_id: @annonce.user, action_annonce: 'show_modal_echange'), method: 'post', class: 'btn btn-primary'%>
     <% else %>
       <div class="alert alert-primary" role="alert">
         <strong><i class="fas fa-check"></i> Cette annonce vous appartient</strong>
