modal full done

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -97,10 +97,10 @@
         <div class="row">
           <div class="my-2 col-md-12">
           <select id="select-annonce" class="form-control" style="color:#469AE0;border:1px solid #469AE0;">
-            <option>Séléctionnez une annonce</option>
+            <option>Séléctionnez un objet que l'utilisateur souhaite échanger</option>
             <% if !@message_to_annonces.nil? %>
               <% @message_to_annonces.each do |annonce| %>
-                <option value="<%= annonce.id %>"><b><%= annonce.titre %></b> contre <b><%= annonce.contre %></b></option>
+                <option value="<%= annonce.id %>"><b><%= annonce.titre %></b></option>
               <% end %>
             <% end %>
           </select>
@@ -120,14 +120,16 @@
               </div>
             </div>
             <div id='objet-contre' style="display:none;">
-              <p>Veuillez renseigné le nom de l'bojet que vous échangez :</p>
-              <input type="text" id="objetdemandeur_titre" class="form-control mb-3" name="objetdemandeur_titre" value="" required="true" disabled>
-              <p>Veuillez télécharger au moins une image de votre <span class="objet-demande"></span> : </p>
+              <p>Veuillez renseigné le nom de l'objet que vous échangez :</p>
+              <input type="text" id="objetdemandeur_titre" class="form-control mb-3" placeholder="Exemple: Iphone X" name="objetdemandeur_titre" value="" required="true" disabled>
+              <hr>
+              <p>Veuillez télécharger au moins une image de votre <span class="objet-demande" id="nouvel-objet"></span> : </p>
               <%= f.error_notification %>
               <%= f.input :objetdemandeur_photo1, label: false, required: true %>
               <%= f.input :objetdemandeur_photo2, label: false, required: false %>
               <%= f.input :objetdemandeur_photo3, label: false, required: false %>
-              <p>Type d'échange (choisir parmis les types d'échange acceptés l'utilisateur): </p>
+              <hr>
+              <p>Type d'échange (choisir parmis les types d'échange acceptés l'utilisateur) : </p>
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="modal-typeechange-main">
                 <label class="form-check-label" for="modal-typeechange-main">
