--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,5 +5,6 @@
 @import "conversation-cards";
 @import "dashboard-cards";
 @import "modal-echange";
+@import "vos-echanges";
 @import "show";
 @import "footer";
