--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
             <%= link_to '<i class="fa fa-user"></i> Mon compte'.html_safe, "#", class: "navbar-lebontroc-link dropdown-toggle", id: "navbar-lebontroc-menu", "data-toggle" => "dropdown" %>
             <ul class="dropdown-menu dropdown-menu-right navbar-lebontroc-dropdown-menu">
               <li><%= link_to '<i class="fas fa-envelope"></i> Messages'.html_safe, conversations_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
-              <li><%= link_to '<i class="fas fa-exchange-alt"></i> Echanges'.html_safe, root_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
+              <li><%= link_to '<i class="fas fa-exchange-alt"></i> Echanges'.html_safe, vos_echanges_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
               <li>
                 <%= link_to edit_user_registration_path do %>
                   <i class="fa fa-cog"></i> <%= t(".profile", default: "Profile") %>
@@ -55,7 +55,7 @@
         <% if user_signed_in? %>
           <li><%= link_to '<i class="fa fa-plus"></i> Déposer une annonce'.html_safe, new_annonce_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
           <li><%= link_to '<i class="fa fa-list"></i> Mes annonces'.html_safe, vos_annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
-          <li><%= link_to '<i class="fas fa-exchange-alt"></i> Echanges'.html_safe, root_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
+          <li><%= link_to '<i class="fas fa-exchange-alt"></i> Echanges'.html_safe, vos_echanges_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
           <li><%= link_to '<i class="fas fa-envelope"></i> Messages'.html_safe, conversations_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
           <% if current_user.admin == true %>
            <li><%= link_to '<i class="fas fa-user-shield"></i> Panel admin'.html_safe, admin_dashboard_index_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
