--- a/app/assets/stylesheets/components/_vos-echanges.scss
+++ b/app/assets/stylesheets/components/_vos-echanges.scss
@@ -4,6 +4,10 @@
   border-radius: 3px;
 }
 
+.panel-vos-echanges {
+  min-height:300px;
+}
+
 #parent-echange-demande > .nav-link.active.show{
   color: white !important;
 }
